...
                    //                        .frame(height: 90)
                    HStack {
                        Text(firebaseAuth.signByApple ? "Please Chose User Type" : "Sign Up")
                            .font(.system(size: 24))
                            .foregroundColor(.white)
...
                                            .padding(.leading)
                                            .keyboardType(.emailAddress)
                                            .accessibilityIdentifier("signUpUserName")
                                            .focused($isFocus)
                                    }
...
                                                .textInputAutocapitalization(.never)
                                                .padding(.leading)
                                                .accessibilityIdentifier("password")
                                                .focused($isFocus)
                                                .onChange(of: signUpVM.userPassword) { newValue in
...
                                                .textInputAutocapitalization(.never)
                                                .padding(.leading)
                                                .accessibilityIdentifier("confirmPassword")
                                                .focused($isFocus)
                                        }
...
                                    .cornerRadius(5)
                                }
                                .accessibilityIdentifier("isProvider")
                                Spacer()
                                    .frame(width: uiScreenWidth / 8 + 10)
...
                                    .cornerRadius(5)
                                }
                                .accessibilityIdentifier("isRenter")
                            }
                            .padding(.top, 10)
...
                                    .cornerRadius(5)
                                }
                                .accessibilityIdentifier("productProvider")
                                Spacer()
                                    .frame(width: uiScreenWidth / 8 - 30)
...
                                    .cornerRadius(5)
                                }
                                .accessibilityIdentifier("rentalManager")
                            }
                            .padding(.top, 10)
...
                                        .keyboardType(.default)
                                        .focused($isFocus)
                                        .accessibilityIdentifier("licenseNumber")
                                    HStack {
                                        Spacer()
...
                                    .padding(.trailing, 5)
                            }
                            .accessibilityIdentifier("tosCheckBox")
                            Group {
                                Text("I agree to the FranciS")
                                    .foregroundColor(.white)
                                    .accessibilityIdentifier("tosP1")
                                Text("Terms of Service")
                                    .foregroundColor(Color.blue)
                                    .accessibilityIdentifier("tosP2")
                                    .onTapGesture {
                                        tosSheetShow.toggle()
...
                                Text("and")
                                    .foregroundColor(.white)
                                    .accessibilityIdentifier("tosP3")
                                Text("Privacy Policy")
                                    .foregroundColor(Color.blue)
...
                                        ppSheetShow.toggle()
                                    }
                                    .accessibilityIdentifier("tosP4")
                                Text(".")
                                    .foregroundColor(.white)
                                    .accessibilityIdentifier("tosP5")
                            }
                            .font(.system(size: 12, weight: .medium))
...
        .background(alignment: .center) {
            Group {
                Image("door1")
                    .resizable()
                    .blur(radius: 10)
...
                    }
            }
            .accessibilityIdentifier("signUp")
        }
        
...
