...
            return NSLocalizedString("Email address is missing", comment: "")
        case .passwordIsEmpty:
            return NSLocalizedString("Please fill in the paassword", comment: "")
        case .confirmPasswordIsEmpty:
            return NSLocalizedString("Please fill in the password", comment: "")
        case .passwordIstooShort:
            return NSLocalizedString("Password should be longer then 8 character", comment: "")
        case .termofServiceIsNotAgree:
            return NSLocalizedString("Please check the Term of Service", comment: "")
        case .missingUserType:
            return NSLocalizedString("Please select the Owner/Renter", comment: "")
        case .passwordAndConfirmIsNotMatch:
            return NSLocalizedString("Please check the confirm password", comment: "")
...
