...
                ScrollView(.vertical, showsIndicators: true) {
                    Group {
                        VStack(spacing: 2) {
                            Text("FranciS 使用者授權合約")
                                .font(.title2)
                                .font(.system(size: 15))
                                .accessibilityIdentifier("tosTitle")
                        }
                        .padding(.top, 5)
                        VStack {
                            Text("若下載、安裝、複製、存取或使用本軟體，即表示您同意本使用者授權合約的條款。如果您代表他人、公司或其他法定實體接受這些條款，則您即聲明並保證您擁有完全的授權，可使該人員、公司或法定實體受這些條款的約束。若您不同意這些條款:")
                                .font(.system(size: 15, weight: .regular))
                            Text("請勿下載、安裝、複製、存取或使用本軟體；並應及時將本軟體和授權證明一併退還至其提供方")
...
